# RepoProof

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  README.md  ingest.json  payload.json  profile_readme.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4cca4432d7df_add_password_hash_to_users.py  61d5d08cc081_create_initial_tables.py  6c9b09ccbdd2_add_generated_outputs_and_output_.py  7374756ed0ba_create_code_facts_and_embeddings_tables.py  a98385580fc5_add_is_private_to_repositories.py  b3aec3e13708_add_nextauth_and_usage_metric_tables.py  f7a92c1b3e04_add_personal_profile_and_multi_repo_jobs.py
backend/app/: __init__.py  analysis_graph.py  celery_app.py  checkpointer.py  database.py  github_client.py  llm_schemas.py  logging_config.py  main.py  metrics.py  models.py  redis_client.py  seed_profile.py  tasks.py
backend/app/tests/: test_analysis.py  test_multi_repo_resume.py
backend/tests/: test_output_generation.py  test_security.py
docs/: api_design.md  checklist.md  commit_log.md  database_schema.md  docker_architecture.md  error_context.md  frontend_architecture.md  implementation_roadmap.md  observability_design.md  proposed_changes.md  queue_worker_design.md  session_context.md  storage_design.md  system_architecture.md
frontend/: .env.example  package-lock.json  package.json  playwright.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/auth/developer-login/: route.ts
frontend/src/app/dashboard/: layout.tsx  page.tsx  reviewStore.ts
frontend/src/app/login/: page.tsx
frontend/src/components/: ApiInterceptor.tsx  ProfileCompletionModal.tsx
frontend/src/lib/: auth-adapter.ts  auth.ts  db.ts
frontend/tests/e2e/: dashboard.spec.ts  e2e_full_flow.spec.ts
litellm/: config.yaml
(+5 files in other folders)
