[project]
name = "repoproof-backend"
version = "0.1.0"
description = "GitHub Repository Intelligence Platform Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.138.0",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "sqlalchemy==2.0.51",
    "alembic==1.18.4",
    "psycopg2-binary==2.9.12",
    "pgvector==0.4.2",
    "redis==8.0.0",
    "celery==5.6.3",
    "python-dotenv==1.2.2",
    "boto3==1.43.34",
    "langgraph==1.2.6",
    "langchain-core==1.4.8",
    "langchain-community==0.4.2",
    "langfuse==4.9.1",
    "structlog==26.1.0",
    "prometheus-client==0.25.0",
    "httpx==0.28.1",
    "langgraph-checkpoint-postgres>=2.0.15",
    "psycopg[binary]>=3.1.18",
    "GitPython==3.1.44",
]

[tool.uv]
managed = true
dev-dependencies = [
    "black>=24.4.2",
    "isort>=5.13.2",
    "pytest>=8.2.2",
]
